# slang

./: .gitignore  Cargo.toml  Lease.toml  README.md  WORKSPACE  justfile  temp.gt  test.gt
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: bench.yml  ci.yml  coverage.yml  release.yml
argot/: Cargo.toml
argot/src/: cli.rs  main.rs
argot/src/argot/: lib.rs  visitor.rs
argot/src/argot/compiler/: compiler_visitor.rs  emit.rs  error.rs  first_pass.rs  label.rs  mod.rs  operator.rs  root.rs  scope.rs  second_pass.rs  types.rs  typing.rs
argot/src/argot/compiler/tests/: mod.rs
argot/src/argot/syntax/: argument_list.rs  arithmetic_expression.rs  atom.rs  atom_expr.rs  block.rs  bool_expr.rs  call.rs  expression.rs  factor.rs  function.rs  if_expr.rs  mod.rs  number.rs  operator.rs  program.rs  statement.rs  term.rs  trailer.rs  var_decl.rs
argot/src/argot/tests/: mod.rs
argot/tests/: compiler.rs
argot/tests/data/: add.asm  add.gt  bool_negation.gt  bool_op.asm  bool_op.gt  bool_usage.asm  bool_usage.gt  empty_program.asm  fn_arg.asm  fn_arg.gt  fn_call_no_ret.asm  fn_call_no_ret.gt  fn_ret_int.gt  if_else.asm  if_else.gt  mult.asm  mult.gt  neg_int.asm  neg_int.gt  nested_math.asm  nested_math.gt  simple_if.asm  simple_if.gt  stack_fallback.asm  stack_fallback.gt  var_decl.asm  var_decl.gt  var_ref.asm  var_ref.gt  var_usage.asm  var_usage.gt
assembler/: Cargo.toml
assembler/src/: asm.rs  instruction_parser.rs  lib.rs  opcode_parser.rs  operand_parser.rs  program_parser.rs  section.rs  symbol.rs
assembler/tests/: mod.rs
assembler/tests/data/: add.asm  symbol.asm  word_directive.asm
cargo/: BUILD  Cargo.toml  crates.bzl
cargo/remote/: arrayvec-0.4.12.BUILD  clap-3.0.0-beta.1.BUILD  clap_derive-3.0.0-beta.1.BUILD  doc-comment-0.3.3.BUILD  env_logger-0.7.1.BUILD  indexmap-1.3.2.BUILD  lexical-core-0.6.7.BUILD  libc-0.2.69.BUILD  log-0.4.8.BUILD  memchr-2.3.3.BUILD  nodrop-0.1.14.BUILD  nom-5.1.1.BUILD  os_str_bytes-2.3.0.BUILD  proc-macro-error-0.4.12.BUILD  proc-macro-error-attr-0.4.12.BUILD  proc-macro2-1.0.10.BUILD  proc-macro2-1.0.12.BUILD  quote-1.0.4.BUILD  serde-1.0.106.BUILD  serde_derive-1.0.106.BUILD  serde_json-1.0.51.BUILD  snafu-0.6.8.BUILD  snafu-derive-0.6.8.BUILD  static_assertions-0.3.4.BUILD  strsim-0.10.0.BUILD  syn-1.0.18.BUILD  syn-mid-0.5.0.BUILD  winapi-0.3.8.BUILD
examples/asm/: add_word.asm  alloc.asm  call.asm  directive.asm  dyn_str.asm  loop.asm  stack.asm
instructor/: Cargo.toml
instructor/src/: instruction.rs  label_converter.rs  lib.rs  opcode.rs  operand.rs  syscall.rs
repl/: BUILD  Cargo.toml
repl/src/: main.rs
slang/: BUILD  Cargo.toml
slang-cli/: BUILD  Cargo.toml
slang-cli/src/: cli.rs  load.rs  main.rs  repl.rs
slang/assembler/: BUILD  Cargo.toml
slang/assembler/src/: asm.rs  assembler.rs  common.rs  directive_parser.rs  instruction_parser.rs  label_parser.rs  lib.rs  opcode_parser.rs  operand_parser.rs  program_parser.rs  register_parser.rs  section.rs  symbol.rs
slang/assembler/tests/: mod.rs
slang/assembler/tests/data/: add.asm  symbol.asm
slang/instructor/: BUILD  Cargo.toml
slang/instructor/src/: instruction.rs  label_converter.rs  lib.rs  opcode.rs  operand.rs  program.rs  syscall.rs
slang/src/: instruction.rs  lib.rs  vm.rs
slang/vm/: BUILD  Cargo.toml
slang/vm/src/: constants.rs  heap.rs  lib.rs  loader.rs  syscall.rs  vm.rs
vm/: Cargo.toml
vm/benches/: bench.rs
vm/benches/data/: stack.asm  tight_loop.asm
vm/src/: constants.rs  heap.rs  lib.rs  loader.rs  machine.rs  memutil.rs  stack.rs  syscall.rs
vm/src/op/: bitwise.rs  branch.rs  math.rs  memory.rs  mod.rs  reg.rs  ro.rs  stack.rs
vm/src/op/tests/: bitwise.rs  branch.rs  math.rs  memory.rs  mod.rs  reg.rs  ro.rs  stack.rs
vm/tests/: mod.rs
vm/tests/data/: alloc.asm  alloc_free.asm  bool_expr.asm  constr.asm  loop.asm  stack.asm
