[package]
name = "argot"
version = "0.1.2"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "argotc"
path = "src/main.rs"

[lib]
name = "argot"
path = "src/argot/lib.rs"

[dependencies]
anyhow = "1.0"
clap = "3.0.0-beta.1"

assembler = {path = "../assembler"}
env_logger = "0.8"
log = {version = "0.4.8", features = ["std"]}
instructor = {path = "../instructor"}
nom = "6"
snafu = "0.6.8"
