[package]
name = "compile_with_bazel"
version = "0.0.0"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[dependencies]
anyhow = "1.0"
byteorder = "1.3"
nom = "5"

[raze.crates.nom."5.1.1"]
gen_buildrs = true
additional_flags = [
    "--cfg=stable_i128"
]

[raze.crates.lexical-core.'0.6.7']
gen_buildrs = true
additional_flags = [
    "--cfg=limb_width_32",
    "--cfg=stable_i128"
]

[raze]
genmode = "Remote"
# The WORKSPACE relative path to the Cargo.toml working directory.
workspace_path = "//cargo"
