[package]
name = "compile_with_bazel"
version = "0.0.0"

# Mandatory (or Cargo tooling is unhappy)
[lib]
path = "fake_lib.rs"

[dependencies]
anyhow = "1.0"
byteorder = "1.3"
clap = "3.0.0-beta.1"
env_logger = "0.7"
log = {version = "0.4.8", features = ["std"]}
nom = "5"

[raze.crates.nom."5.1.1"]
gen_buildrs = true
additional_flags = [
    "--cfg=stable_i128"
]

[raze.crates.lexical-core.'0.6.7']
gen_buildrs = true
additional_flags = [
    "--cfg=limb_width_32",
    "--cfg=stable_i128"
]

[raze.crates.syn.'1.0.18']
gen_buildrs = true

[raze.crates.proc-macro2.'1.0.12']
gen_buildrs = true
additional_flags = [
    "--cfg=u128",
    "--cfg=use_proc_macro",
    "--cfg=wrap_proc_macro",
]

[raze.crates.proc-macro-error.'0.4.12']
gen_buildrs = true
additional_flags = [
    "--cfg=use_fallback",
]

[raze.crates.indexmap.'1.3.2']
additional_flags = [
    "--cfg=has_std",
]

[raze.crates.log.'0.4.8']
gen_buildrs = true
additional_flags = [
    "--cfg=atomic_cas",
]

[raze]
genmode = "Remote"
# The WORKSPACE relative path to the Cargo.toml working directory.
workspace_path = "//cargo"
