[package]
name = "repl"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"

assembler = {path = "../slang/assembler"}
vm = {path = "../slang/vm"}