[package]
name = "slang"
version = "0.1.2"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
clap = {version = "4", features = ["derive"]}

assembler = {path = "../assembler"}
env_logger = "0.9"
instructor = {path = "../instructor"}
log = {version = "0.4.8", features = ["std", "release_max_level_error", "max_level_trace"]}
vm = {path = "../vm"}
