[package]
name = "vm"
description = "The Slang virtual machine runtime."
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
instructor = {path = "../instructor"}
log = {version = "0.4.8", features = ["std"]}
snafu = "0.6.8"
