[package]
name = "assembler"
version = "0.1.0"
authors = ["William Dussault <dalloriam@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
byteorder = "1.3"
instructor = {path = "../instructor"}
nom = "5"
snafu = "0.6.8"
